@startuml
abstract class ReviewableEntity {
    +String name
    +String address
    +Float averageRating
}

class Hotel extends ReviewableEntity {
    +Integer stars
    +Integer roomCount
    +String priceRange
    +List<String> amenities
    +String phoneNumber
    +String checkInTime
    +String checkOutTime
    +String website
    +Boolean parkingAvailable
    +Boolean wifiAvailable
    +bookRoom(roomType: String, checkIn: Date, checkOut: Date): Boolean
    +checkAvailability(date: Date): Integer
    +getRoomTypes(): List<String>
    +getAmenities(): List<String>
    +calculatePrice(nights: Integer, roomType: String): Float
}

class Review {
    +String comment
    +Integer rating
    +Date date
    +Status status
    +submit()
}

class User {
    +String username
    +String email
}

User "1" -- "*" Review : creates
Review "*" -- "1" Hotel : belongs to
@enduml